# text-image-RAG

./: .env.example  .gitignore  Dockerfile  README.md  SPEC.md  app.py  backend.py  chainlit.md  conftest.py  docker-compose.yml  generate_tech_stack_pdf.py  pyproject.toml  requirements.txt  text_image_rag.ipynb
.gitignore/: .env
api/: dependencies.py  main.py
api/routes/: auth.py  health.py  ingest.py  query.py
api/schemas/: ingest.py  query.py
core/: config.py  logger.py  security.py
rag/: embedder.py  generator.py  hyde.py  reranker.py  retriever.py  vector_store.py
rag/parser/: __init__.py  docx.py  excel.py  pdf.py  txt.py  utils.py
tasks/: ingest_task.py
tests/integration/: test_pipeline.py
tests/unit/: test_embedder.py  test_parser.py  test_retriever.py
